--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "frameless-titlebar",
-  "version": "1.0.8",
+  "name": "frameless-titlebar-types",
+  "version": "1.0.6",
   "description": "Customizable titlebar from frameless Electron desktop applications",
-  "author": "Cristian006",
+  "author": "sdc224",
   "license": "MIT",
-  "repository": "Cristian006/frameless-titlebar",
+  "repository": "sdc224/frameless-titlebar",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "jsnext:main": "dist/index.es.js",
@@ -15,7 +15,7 @@
   "scripts": {
     "test": "cross-env CI=1 react-scripts test --env=jsdom",
     "test:watch": "react-scripts test --env=jsdom",
-    "build": "rollup -c",
+    "build": "rollup -c && tsc",
     "start": "rollup -c -w",
     "prepare": "yarn run build",
     "predeploy": "cd example && yarn install && yarn run build",
@@ -28,6 +28,8 @@
   },
   "devDependencies": {
     "@svgr/rollup": "^2.4.1",
+    "@types/react": "^16.9.17",
+    "@types/react-dom": "^16.9.4",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.5",
     "babel-plugin-external-helpers": "^6.22.0",
@@ -35,6 +37,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "cross-env": "^5.1.4",
+    "electron": "^7.1.7",
     "eslint": "^5.0.1",
     "eslint-config-react": "^1.1.7",
     "eslint-config-standard": "^11.0.0",
@@ -45,16 +48,20 @@
     "eslint-plugin-react": "^7.10.0",
     "eslint-plugin-standard": "^3.1.0",
     "gh-pages": "^1.2.0",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "react-scripts": "^1.1.4",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-scripts": "^3.3.0",
     "rollup": "^0.64.1",
     "rollup-plugin-babel": "^3.0.7",
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-postcss": "^1.6.2",
-    "rollup-plugin-url": "^1.4.0"
+    "rollup-plugin-terser": "^5.1.3",
+    "rollup-plugin-typescript2": "^0.25.3",
+    "rollup-plugin-url": "^1.4.0",
+    "typescript": "^3.7.4",
+    "@types/node": "^12.12.21"
   },
   "dependencies": {
     "lodash.isequal": "^4.5.0"
@@ -76,6 +83,7 @@
     "cross-platform",
     "crossplatform",
     "desktop",
-    "app"
-	]
+    "app",
+    "typescript"
+  ]
 }
